[package]
name = "todo"
version = "0.0.0"
workspace = "../../"

[dependencies]
rocket = { path = "../../lib" }
rocket_codegen = { path = "../../codegen" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "0.7"
diesel = { version = "0.16", features = ["sqlite"] }
diesel_codegen = { version = "0.16", features = ["sqlite"] }
r2d2-diesel = "0.16"
dotenv = "0.10.*" # workaround for broken dependencies

[dev-dependencies]
parking_lot = {version = "0.4", features = ["nightly"]}
rand = "0.3"

[dependencies.rocket_contrib]
path = "../../contrib"
default_features = false
features = [ "tera_templates" ]
